show details cards and subtasks

--- a/public/views/templates/edit_card.html
+++ b/public/views/templates/edit_card.html
@@ -20,7 +20,7 @@
                 <p><b>Progress:</b><span>20%</span></p>
             </div>
             <div class="modal-section progress-section col-lg-6">
-                <p><b>Done:</b><span>50%</span></p>
+                <p><b>Done:</b><span>{{card.done_ratio}}</span></p>
             </div>
         </div>
         <div class="row">
