move add subtask model into seperated file

--- a/public/views/templates/edit_card.html
+++ b/public/views/templates/edit_card.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="modal-section col-lg-12">
                 <div class="userstory-edit-img">
-                    <img class="member" title="{{card.assigned_to.name}}" gravatar-src="'{{card.assigned_to.mail}}'" gravatar-size="100" />
+                    <img class="member" title="{{card.assigned_to.name}}" gravatar-src="card.assigned_to.mail" gravatar-size="100" />
                 </div>
                 <p><b>Added by: </b> {{card.author.name}}</p>
                 <p><b>From: </b> {{card.created_on}}</p>
