--- a/public/views/templates/add_subtask.html
+++ b/public/views/templates/add_subtask.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-  <button type="button" ng-click="createNewTask(card)" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+  <button type="button" class="btn btn-default" ng-click="dismiss()">Close</button>
+  <button type="button" ng-click="createNewTask(card)" class="btn btn-primary">Save changes</button>
 </div>
     
